--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
-   <script defer src="script.js"></script>
-   <title>snake Game</title>
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <title>Snake Game</title>
+</head> 
+    
 <body>
-   <canvas id="snake" width="512" height="512"></canvas>
-</body>
+    <nav class="container">
+    <h1><i class="fas fa-gamepad"></i>Snake Game</h1> 
+    <canvas id="snake" width="512" height="512"></canvas>
+    </nav>
+    
+    <script defer src="script.js"></script>
+</body> 
 </html>
